--- a/assets/layout.css
+++ b/assets/layout.css
@@ -1,46 +1,39 @@
-main {
-  display: block;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: space-around;
-  /* gap: 12px; */
-}
-
-article {
-  /* height: 40px; */
+div.demo article {
   margin-bottom: 1rem;
 
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  /* gap: 12px; */
 }
 
-
-h2 {
-  color: hsl(0, 0%, 20%);
-  margin: 0;
-  padding: 0.25rem;
+div.demo h2 {
+  margin: 0 0 0.3rem 0;
+  padding: 0;
 }
 
-article > header {
+div.demo article > header {
   flex-basis: 250px;
   flex-shrink: 0;
   margin-right: 1rem;
-
+  padding: 0.5rem 0.5rem 0.1rem 0.5rem;
 
   font-size: 15px;
-  background-color: hsl(0, 0%, 90%);
+  background-color: hsl(0, 0%, 92%);
+  color: hsl(0, 0%, 20%);
   width: 250px;
-  /* height: 75px; */
   vertical-align: top;
   align-content: stretch;
-  /* margin-bottom: 1em; */
-  /* background: yellow; */
 }
 
-section {
-  align-self: top;
+div.demo section {
+  vertical-align: top;
+  align-items: start;
+  align-self: flex-start;
+}
+
+div.demo p {
+  padding: 0;
+  margin: 0 ;
 }
 
 
@@ -53,9 +46,3 @@ svg {
     height: 146px;
   }
 
-/* table */
-
-section#data-table {
-  /* width: 800px;
-  overflow-x: scroll; */
-}
