--- a/assets/style.css
+++ b/assets/style.css
@@ -108,3 +108,21 @@ a#skip:focus {
   width: auto;
   height: auto;
 }
+
+/* project description */
+#project-description {
+  max-width: 40rem;
+  margin: auto;
+}
+
+img.braille-glyph {
+  width: 150px;
+}
+
+img.braille-glyph:nth-of-type(1) {
+  float: left;
+}
+
+img.braille-glyph:nth-of-type(2) {
+  float: right;
+}
