--- a/assets/style.css
+++ b/assets/style.css
@@ -115,14 +115,14 @@ a#skip:focus {
   margin: auto;
 }
 
-img.braille-glyph {
+object.braille-glyph {
   width: 150px;
 }
 
-img.braille-glyph:nth-of-type(1) {
+object.braille-glyph:nth-of-type(1) {
   float: left;
 }
 
-img.braille-glyph:nth-of-type(2) {
+object.braille-glyph:nth-of-type(2) {
   float: right;
 }
